// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jTzLTM hOfwmR"
  >
    <table
      className="sc-fjdhpX fJNajq"
    >
      <tbody
        className="sc-cSHVUG CAuLq"
      >
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            US
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            PL
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Warsaw
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            DE
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Berlin
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            FR
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Paris
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            ES
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Madird
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            —
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jTzLTM hOfwmR"
  >
    <table
      className="sc-fjdhpX fJNajq"
    >
      <thead
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <th
            className="sc-kgoBCf hvoPyL"
          >
            Code
          </th>
          <th
            className="sc-kgoBCf hvoPyL"
          >
            Capital
          </th>
          <th
            className="sc-kgoBCf hvoPyL"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-cSHVUG CAuLq"
      >
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            US
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            PL
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Warsaw
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            DE
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Berlin
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            FR
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Paris
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            ES
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Madird
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-chPdSV bnXeiB"
          >
            —
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jTzLTM hOfwmR"
  >
    <table
      className="sc-fjdhpX fJNajq"
    >
      <thead
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <th
            className="sc-kgoBCf hvoPyL"
          >
            #
          </th>
          <th
            className="sc-kgoBCf hvoPyL"
          >
            Code
          </th>
          <th
            className="sc-kgoBCf hvoPyL"
          >
            Capital
          </th>
          <th
            className="sc-kgoBCf hvoPyL"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-cSHVUG CAuLq"
      >
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-kGXeez genbSA"
          >
            1
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            US
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-kGXeez genbSA"
          >
            2
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            PL
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Warsaw
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-kGXeez genbSA"
          >
            3
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            DE
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Berlin
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-kGXeez genbSA"
          >
            4
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            FR
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Paris
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-kGXeez genbSA"
          >
            5
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            ES
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Madird
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-kAzzGY iVbVOc"
        >
          <td
            className="sc-kGXeez genbSA"
          >
            6
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            —
          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-chPdSV bnXeiB"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
